# vc-intrinsics

./: 0001-Refactor-GenXSPIRV-Adaptors-and-remove-some-embargo.patch  CMakeLists.txt
GenXIntrinsics/: CMakeLists.txt
GenXIntrinsics/docs/: GenXLangRef.rst
GenXIntrinsics/include/llvm/GenXIntrinsics/: CMakeLists.txt  GenXIntrinsicInst.h  GenXIntrinsics.h  GenXKernelMDOps.h  GenXMetadata.h  GenXSPIRVReaderAdaptor.h  GenXSPIRVWriterAdaptor.h  GenXSimdCFLowering.h  Intrinsic_definitions.py  Intrinsics.py
GenXIntrinsics/include/llvmVCWrapper/IR/: DerivedTypes.h  Function.h  GlobalValue.h  GlobalVariable.h  InstrTypes.h  Instructions.h
GenXIntrinsics/include/llvmVCWrapper/Support/: Alignment.h
GenXIntrinsics/lib/: CMakeLists.txt
GenXIntrinsics/lib/GenXIntrinsics/: AdaptorsCommon.h  CMakeLists.txt  GenXIntrinsics.cpp  GenXRestoreIntrAttr.cpp  GenXSPIRVReaderAdaptor.cpp  GenXSPIRVWriterAdaptor.cpp  GenXSimdCFLowering.cpp
GenXIntrinsics/test/Plugin/: Plugin.cpp
GenXIntrinsics/unittests/GenXIntrinsics/: GenXIntrinsicsTest.cpp
SPIRV-LLVM-Translator/: CMakeLists.txt
SPIRV-LLVM-Translator/include/: LLVMSPIRVOpts.h
SPIRV-LLVM-Translator/lib/SPIRV/: CMExport.cpp  CMExport.h  CMUtil.cpp  CMUtil.h  CMakeLists.txt  OCLUtil.h  PreprocessMetadata.cpp  SPIRVInternal.h  SPIRVLowerOCLBlocks.cpp  SPIRVReader.cpp  SPIRVReader.h  SPIRVUtil.cpp  SPIRVWriter.cpp  SPIRVWriter.h  VectorComputeUtil.cpp  VectorComputeUtil.h
SPIRV-LLVM-Translator/lib/SPIRV/libSPIRV/: SPIRVDecorate.cpp  SPIRVDecorate.h  SPIRVEntry.cpp  SPIRVEntry.h  SPIRVEnum.h  SPIRVInstruction.h  SPIRVIsValidEnum.h  SPIRVNameMapEnum.h  SPIRVType.h  spirv.hpp
SPIRV-LLVM-Translator/test/: Extension_SPV_CM_INTEL.ll  constexpr_vector.ll  float_control.ll  float_control_empty.ll
SPIRV-LLVM-Translator/test/transcoding/SPV_INTEL_function_pointers/: vector_elem.ll
SPIRV-LLVM-Translator/tools/llvm-spirv/: llvm-spirv.cpp
docs/: GenXLangRef.rst  GenXLangRef.rst_in
include/llvm/GenXIntrinsics/: CMakeLists.txt  GenXIntrinsicInst.h  GenXIntrinsics.h  Intrinsic_definitions.py  Intrinsics.py
include/llvm/GenXOpts/Utils/: LowerCMSimdCF.h
include/llvm/IR/: IntrinsicsGenX.td
lib/GenXIntrinsics/: CMakeLists.txt  GenXIntrinsics.cpp
lib/GenXOpts/CMTrans/: CMSimdCFLowering.cpp
lib/Transforms/Scalar/: CMSimdCFLowering.cpp
lib/Transforms/Scalar/CMTrans/: CMSimdCFLowering.cpp
unittests/GenXIntrinsics/: CMakeLists.txt  GenXIntrinsicsTest.cpp
